added bootstrap and jquery files to /css and /js, fixed index.ejs to reflect this

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>This Week in Comics --<%= pageTitle %></title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
   </head>
   <body>
+
+  <div class="container-fluid">
+    <h1>This Week in Comics</h1>
+  </div> 
+
   </body>
 </html>
