page properly displaying comic covers, can't get text to work without messing up the covers

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -5,3 +5,9 @@ body{
   padding: 40px 15px;
   text-align: center;
 }
+img {
+  margin: auto;
+  padding: 5px;
+  height: 300px;
+  width: 200px;
+}
