--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -23,7 +23,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="#">This Week</a></li>
             <li><a href="#">Publishers</a></li>
             <li><a href="#">Message Boards</a></li>
           </ul>
