--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -2,49 +2,37 @@
 <html lang="en">
   <head>
     <title>This Week in Comics - <%= pageTitle %></title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <% include partials/head.ejs %>
   </head>
 
   <body id="<%= pageID %>">
-
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Comics</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">This Week</a></li>
-            <li><a href="#">Publishers</a></li>
-            <li><a href="#">Message Boards</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+    <header>
+      <% include partials/header.ejs %>
+    </header>
 
     <div class="container-fluid">
       <div class="content">
         <h1>This Week in Comics</h1>
+        <hr>
       </div>
-    </div><!-- /.container-fluid --> 
-
-    <div class="covers">
-      <!-- Commented out until database is used to grab data-->
-      <%# if (coverArt.length > 0) { %>
-      <%# for(i=0; i < coverArt.length; i++) { %>
-        <!-- img src="/images/covers/<%#= coverArt[i] %>" alt="<%#= title[i] %>" /-->
-      <%# } %>
-      <%# } %>
     </div>
+
+    <div class="row">
+      <div class="col-sm-8">
+        <div class="covers">
+          <h2>Covers</h2>
+          <!-- Commented out until database is used to grab data-->
+          <%# if (coverArt.length > 0) { %>
+          <%# for(i=0; i < coverArt.length; i++) { %>
+            <!-- img src="/images/covers/<%#= coverArt[i] %>" alt="<%#= title[i] %>" /-->
+          <%# } %>
+          <%# } %>
+        </div>
+      </div><!-- /.col-sm-8 --> 
+      <div class="col-sm-4">
+        <h2>News</h2>
+      </div><!-- /.col-sm-8 --> 
+    </div><!-- /.row --> 
 
     <script src="/js/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
