--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -2,12 +2,14 @@
 <html>
 <head>
   <title>Comic - Login</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <% include partials/head.ejs %>
 </head>
 <body>
+
+<header>
+  <% include partials/header.ejs %>
+</header>
+
 <div class="container">
 
 <div class="col-sm-6 col-sm-offset-3">
