--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -20,13 +20,12 @@
     <div class="row">
       <div class="col-sm-8">
         <div class="covers">
-          <h2>Covers</h2>
-          <!-- Commented out until database is used to grab data-->
-          <%# if (coverArt.length > 0) { %>
-          <%# for(i=0; i < coverArt.length; i++) { %>
-            <!-- img src="/images/covers/<%#= coverArt[i] %>" alt="<%#= title[i] %>" /-->
-          <%# } %>
-          <%# } %>
+          <h2>Releasing This Week:</h2>
+          <% if (coverArt.length > 0) { %>
+          <% for(i=0; i < coverArt.length; i++) { %>
+            <img src="/images/covers/<%= coverArt[i] %>" alt="<%= title[i] %>">
+          <% } %>
+          <% } %>
         </div>
       </div><!-- /.col-sm-8 --> 
       <div class="col-sm-4">
