--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -1,17 +1,25 @@
 <!-- views/partials/header.ejs -->
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/">Comics</a>
-    </div>
+   <div class="navbar-header">
+    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="/">Comics</a>
+   </div> <!-- end navbar-header -->
+   <div class="collapse navbar-collapse" id="navbar">
     <ul class="nav navbar-nav">
       <li class="active"><a href="/">This Week</a></li>
       <li><a href="#">Publishers</a></li>
       <li><a href="#">Message Boards</a></li>
     </ul>
     <ul class ="nav navbar-nav navbar-right">
-      <li><a href="/signup"><span class="glyphicon glyphicon-user"></spa    n> Sign Up</a></li>
-      <li><a href="/login"><span class="glyphicon glyphicon-log-in"></sp    an> Login</a></li>
+     <li><a href="/signup"><span class="glyphicon glyphicon-user"></spa    n> Sign Up</a></li>
+     <li><a href="/login"><span class="glyphicon glyphicon-log-in"></sp    an> Login</a></li>
     </ul>
+  </div> <!-- end navbar-collapse -->
   </div> <!-- end container-fluid -->
 </nav>
