--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -17,8 +17,9 @@
       <li><a href="#">Message Boards</a></li>
     </ul>
     <ul class ="nav navbar-nav navbar-right">
-     <li><a href="/signup"><span class="glyphicon glyphicon-user"></spa    n> Sign Up</a></li>
-     <li><a href="/login"><span class="glyphicon glyphicon-log-in"></sp    an> Login</a></li>
+     <li><a href="/profile"> Profile</a></li>
+     <li><a href="/signup"> Sign Up</a></li>
+     <li><a href="/login"> Login</a></li>
     </ul>
   </div> <!-- end navbar-collapse -->
   </div> <!-- end container-fluid -->
