--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -16,22 +16,43 @@
         <hr>
       </div>
     </div>
+    
 
+    <div class="col-sm-8">
+    <h2>Releasing This Week:</h2><br>
+    <div class="container-covers">
+      <% if (coverArt.length > 0) { %>
+      <% for(i=0; i < coverArt.length; i++) { %>
+        <div class="item-covers">
+          <img src="/images/covers/<%=coverArt[i]%>" alt="<%=title[i]%>">
+          <p><strong><%= title[i] %></strong></p>
+        </div>
+        <% } %>
+        <% } %>
+      </div>
+    </div>
+    </div>
+    <div class="col-sm-4">
+    <h2>News:<h2>
+    </div>
+
+    <!--
     <div class="row">
       <div class="col-sm-8">
-        <div class="covers">
+        <div class="row covers">
           <h2>Releasing This Week:</h2>
           <% if (coverArt.length > 0) { %>
           <% for(i=0; i < coverArt.length; i++) { %>
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
             <img src="/images/covers/<%= coverArt[i] %>" alt="<%= title[i] %>">
+            <p><strong><%= title[i] %></strong></p>
+            </div>
           <% } %>
           <% } %>
         </div>
-      </div><!-- /.col-sm-8 --> 
-      <div class="col-sm-4">
-        <h2>News</h2>
-      </div><!-- /.col-sm-8 --> 
-    </div><!-- /.row --> 
+      </div> 
+    //-->
+
 
     <script src="/js/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
