--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Comic - Login</title>
+  <title>Comics - Login</title>
   <% include partials/head.ejs %>
 </head>
 <body>
