--- a/app/views/partials/headerLI.ejs
+++ b/app/views/partials/headerLI.ejs
@@ -17,8 +17,8 @@
       <li><a href="#">Message Boards</a></li>
     </ul>
     <ul class ="nav navbar-nav navbar-right">
-     <li><a href="/signup"> Sign Up</a></li>
-     <li><a href="/login"> Login</a></li>
+     <li><a href="/profile"> Profile</a></li>
+     <li><a href="/logout"> Logout</a></li>
     </ul>
   </div> <!-- end navbar-collapse -->
   </div> <!-- end container-fluid -->
