--- a/app/views/profile.ejs
+++ b/app/views/profile.ejs
@@ -7,7 +7,7 @@
 <body>
 
   <header>
-    <% include partials/header.ejs %>
+    <% include partials/headerLI.ejs %>
   </header>
 
 <div class="container">
