--- a/app/views/profile.ejs
+++ b/app/views/profile.ejs
@@ -21,7 +21,7 @@
     <!-- LOCAL INFORMATION -->
     <div class="col-sm-6">
       <div class="well">
-        <h3>ID: <%= user._id %></h3>
+        <h3><%= user.local.username %></h3>
 
           <p>
             <strong>email</strong>: <%= user.local.email %><br>
