Created jQuery script to load collection data on profile page, still not fully working

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -35,3 +35,12 @@ img {
 .book-submission{
   text-align: left;
 }
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
