some more work towards geting mongodb information, started work on modals, only showing the first image

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -44,3 +44,12 @@ td, th {
   text-align: left;
   padding: 8px;
 }
+
+.white-popup-block {
+  position: relative;
+  background: #FFF;
+  padding: 20px;
+  width: auto;
+  max-width: 500px;
+  margin: 20px auto;
+}
