--- a/app/views/indexLI.ejs
+++ b/app/views/indexLI.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>This Week in Comics - <%= pageTitle %></title>
+    <title>ComMix - <%= pageTitle %></title>
     <% include partials/head.ejs %>
   </head>
 
@@ -39,7 +39,6 @@
       <h2>News:<h2>
     </div>
 
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <% include partials/footer.ejs %>
   </body>
 </html>
