--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Comics - Login</title>
+  <title>ComMix - Login</title>
   <% include partials/head.ejs %>
 </head>
 <body>
@@ -43,5 +43,7 @@
 </div> <!-- end col-sm-6 div -->
 
 </div> <!-- end container div -->
+
+<% include partials/footer.ejs %>
 </body>
 </html>
