--- a/app/views/partials/headerLI.ejs
+++ b/app/views/partials/headerLI.ejs
@@ -8,7 +8,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/">Comics</a>
+    <a class="navbar-brand" href="/">ComMix</a>
    </div> <!-- end navbar-header -->
    <div class="collapse navbar-collapse" id="navbar">
     <ul class="nav navbar-nav">
