--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Comic - Login</title>
+  <title>ComMix - Login</title>
   <% include partials/head.ejs %>
 </head>
 <body>
@@ -47,5 +47,6 @@
 </div> <!-- end col-sm-6 div -->
 
 </div> <!-- end container div -->
+<% include partials/footer.ejs %>
 </body>
 </html>
