--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -25,14 +25,22 @@
       <% if (coverArt.length > 0) { %>
       <% for(i=0; i < coverArt.length; i++) { %>
         <div class="item-covers">
-          <a class="popup-modal" href="#test-modal">
-            <img src="/images/covers/<%=coverArt[i]%>" alt="<%=title[i]%>">
-          </a>
+          <img id="<%= i %>" data-toggle="modal" data-target="#myModal"
+           src="/images/covers/<%=coverArt[i]%>" alt="<%=title[i]%>">
           <p><strong><%= title[i] %></strong></p>
-          <div id="test-modal" class="white-popup-block mfp-hide">
-            <h1><%= title[i] %></h1>
-            <img src="/images/covers/<%=coverArt[i]%>" alt="<%=title[i]%>">
-            <p><a class="popup-modal-dismiss" href="#">Close</a></p>
+          <div id="myModal" class="modal fade"> 
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-body">
+                  <img class="showimage img-responsive" src=""> 
+                  <h1 class="comic title"></h1>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" 
+                  data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <% } %>
