added a post method for collection, doesnt work

--- a/app/views/profile.ejs
+++ b/app/views/profile.ejs
@@ -31,6 +31,7 @@
       <div class="well">
         <h3>Add To Collection:</h3><hr>
         <div class="book-submission">
+        <form action="/collection" method="post">
           <label>Title:</label>
           <input type="text" name="title">  
           <label>  Issue Numbers:</label> 
@@ -58,6 +59,7 @@
           <label>Artist:(Optional)</label>
           <input type="text" name="artist"><br>  
           <input type="submit" value="Submit">
+        </form>
         </div><!-- end form-group -->
         
       </div> <!-- end well -->
