--- a/app/views/partials/head.ejs
+++ b/app/views/partials/head.ejs
@@ -1,7 +1,7 @@
 <!-- views/partials/head.ejs -->
 
 <meta charset="utf-8">
-<meta name="viewport" content="width-device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" href="/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/style.css">
