--- a/app/views/indexLI.ejs
+++ b/app/views/indexLI.ejs
@@ -16,29 +16,104 @@
         <hr>
       </div>
     </div>
-    
+
     <!-- Everything below this line needs to be data based
     on the person logged in
     i.e. Current collection releases, related interests -->
+    
 
     <div class="col-sm-8" style="background-color: lightgrey">
-    <h2>Releasing This Week:</h2>
+    <h2>Your Books Releasing this Week:</h2>
     <div class="container-covers">
       <% if (coverArt.length > 0) { %>
       <% for(i=0; i < coverArt.length; i++) { %>
+      <% for(j=0; j < userTitle.length; j++) { %>
+      <% if( title[i].indexOf(userTitle[j]) > -1 ) {%>
+
         <div class="item-covers">
-          <img src="/images/covers/<%=coverArt[i]%>" alt="<%=title[i]%>">
+          <img id="<%= i %>" data-toggle="modal" data-target="#myModal"
+           src="/images/covers/<%=coverArt[i]%>" alt="<%=title[i]%>">
           <p><strong><%= title[i] %></strong></p>
-        </div>
+
+          <div id="myModal" class="modal fade"> 
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-body">
+                  <img class="showimage img-responsive" src="">
+                  <div id="comicTitle">
+                  </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" 
+                  data-dismiss="modal">Close</button>
+                </div>
+              </div><!-- end modal-content -->
+            </div><!-- end modal-dialog -->
+          </div><!-- end myModal -->
+
+        </div> <!-- end item-covers -->
+
+        <% } %>
+        <% } %>
         <% } %>
         <% } %>
       </div>
-    </div>
+      <div class="recommend">
+        <h2>Recommended Titles:</h2>
+      </div>
     </div>
     <div class="col-sm-4" style="background-color: darkgrey">
       <h2>News:<h2>
+
+      <!-- start sw-rss-feed code --> 
+      <script type="text/javascript"> 
+      <!-- 
+      rssfeed_url = new Array(); 
+      rssfeed_url[0]="http://www.newsarama.com/home/feed/site.xml";  
+      rssfeed_frame_width="550"; 
+      rssfeed_frame_height="900"; 
+      rssfeed_scroll="on"; 
+      rssfeed_scroll_step="6"; 
+      rssfeed_scroll_bar="off"; 
+      rssfeed_target="_blank"; 
+      rssfeed_font_size="12"; 
+      rssfeed_font_face=""; 
+      rssfeed_border="on"; 
+      rssfeed_css_url="http://feed.surfing-waves.com/css/style4.css"; 
+      rssfeed_title="off"; 
+      rssfeed_title_name=""; 
+      rssfeed_title_bgcolor="#3366ff"; 
+      rssfeed_title_color="#fff"; 
+      rssfeed_title_bgimage="http://"; 
+      rssfeed_footer="off"; 
+      rssfeed_footer_name="rss feed"; 
+      rssfeed_footer_bgcolor="#fff"; 
+      rssfeed_footer_color="#333"; 
+      rssfeed_footer_bgimage="http://"; 
+      rssfeed_item_title_length="50"; 
+      rssfeed_item_title_color="#666"; 
+      rssfeed_item_bgcolor="#fff"; 
+      rssfeed_item_bgimage="http://"; 
+      rssfeed_item_border_bottom="on"; 
+      rssfeed_item_source_icon="off"; 
+      rssfeed_item_date="off"; 
+      rssfeed_item_description="on"; 
+      rssfeed_item_description_length="120"; 
+      rssfeed_item_description_color="#666"; 
+      rssfeed_item_description_link_color="#333"; 
+      rssfeed_item_description_tag="off"; 
+      rssfeed_no_items="0"; 
+      rssfeed_cache = "cb8279b925a5da24939aa1e146998801"; 
+      //--> 
+      </script> 
+      <script type="text/javascript" src="http://feed.surfing-waves.com/js/rss-feed.js"></script> 
+      <!-- The link below helps keep this service FREE, and helps other people find the SW widget. Please be cool and keep it! Thanks. --> 
+      <div style="text-align:right; width:700px;"><a href="http://www.surfing-waves.com/feed.htm" target="_blank" style="color:#ccc;font-size:10px">widget @</a> <a href="http://www.surfing-waves.com" target="_blank" style="color:#ccc;font-size:10px">surfing-waves.com</a></div> 
+      <!-- end sw-rss-feed code -->
+
     </div>
 
     <% include partials/footer.ejs %>
+    <script src="/js/modal.js"></script>
   </body>
 </html>
