--- a/app/views/profile.ejs
+++ b/app/views/profile.ejs
@@ -52,7 +52,7 @@
             <option value="Zenescope Entertainment">Zenescope Entertainment</option>
           </select>
           <label>Ongoing:</label>
-          <input type="radio" name="ongoing" value=true> Yes 
+          <input type="radio" name="ongoing" value=true checked="checked"> Yes 
           <input type="radio" name="ongoing" value=false> No <br>
           <label>Writer:(Optional)</label>
           <input type="text" name="writer"><br>
@@ -79,6 +79,7 @@
                 <th>Ongoing</th>
                 <th>Writer</th>
                 <th>Artist</th>
+                <th>Delete?</th>
               </tr>
             </thead>
             <tbody>
