recommended titles added and filled, onto message boards

--- a/app/views/indexLI.ejs
+++ b/app/views/indexLI.ejs
@@ -59,21 +59,25 @@
         <% } %>
       </div>
 
-      <div id="recommended">
+      <div id="row">
       <h2>Recommended Titles:</h2>
+        <div id="recommended">
         <table>
           <thead>
             <tr>
               <th>Title</th>
               <th>Publisher</th>
+              <th>Ongoing</th>
               <th>Writer</th>
               <th>Artist</th>
+              <th>Purchase</th>
             </tr>
           </thead>
           <tbody>
           <!-- Data filled by recommend.js script -->
           </tbody>
         </table>
+      </div>
       </div>
 
     </div>
