--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -14,7 +14,7 @@
     <ul class="nav navbar-nav">
       <li class="active"><a href="/">This Week</a></li>
       <li><a href="#">Publishers</a></li>
-      <li><a href="#">Message Boards</a></li>
+      <li><a href="/messageBoards">Message Boards</a></li>
     </ul>
     <ul class ="nav navbar-nav navbar-right">
      <li><a href="/signup"> Sign Up</a></li>
