--- a/app/views/partials/head.ejs
+++ b/app/views/partials/head.ejs
@@ -1,5 +1,6 @@
 <!-- views/partials/head.ejs -->
 
+<title>ComMix - <%= pageTitle %></title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
