--- a/app/views/partials/headerLI.ejs
+++ b/app/views/partials/headerLI.ejs
@@ -12,7 +12,7 @@
    </div> <!-- end navbar-header -->
    <div class="collapse navbar-collapse" id="navbar">
     <ul class="nav navbar-nav">
-      <li class="active"><a href="/">This Week</a></li>
+      <li><a href="/">This Week</a></li>
       <li><a href="#">Publishers</a></li>
       <li><a href="/messageBoards">Message Boards</a></li>
     </ul>
