--- a/app/views/profile.ejs
+++ b/app/views/profile.ejs
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ComMix - Profile</title>
   <% include partials/head.ejs %>
 </head>
-<body>
+<body id="<%= pageID %>">
 
   <header>
     <% include partials/headerLI.ejs %>
